--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,4 +1,6 @@
 :root {
   --font-size: 16px;
-  --color-primary: #409eff;
+  --color-primary: rgba(64, 158, 255, 1);
+  --color-danger: rgba(245, 108, 108, 1);
+  --color-danger-hover: rgba(245, 108, 108, 0.6);
 }
