--- a/components/menu/style.css
+++ b/components/menu/style.css
@@ -5,7 +5,7 @@
   margin-top: 0.5em;
   content: '';
   float: left;
-  border: 1.5em solid var(--color-primary);
+  border: 1.5em solid #fff;
 }
 
 .ribbon:after {
@@ -26,7 +26,7 @@
 }
 
 .ribbon span {
-  background: var(--color-primary);
+  background: #fff;
   display: inline-block;
   line-height: 3em;
   padding: 0 1em;
@@ -47,6 +47,10 @@
 .ribbon a:hover span {
   background: #FFD204;
   margin-top: 0;
+}
+
+.ribbon a .active {
+  color: var(--color-primary);
 }
 
 .ribbon span:before {
