--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,10 +58,10 @@ aside {
 }
 
 .document-toc-link.document-toc-link[aria-current]:not([aria-current=""]):not([aria-current=false]) {
-    background-color: var(--color-danger-hover);
-    border-left: 2px solid var(--color-danger);
-    color: var(--color-primary);
-    font-weight: 600;
+  background-color: var(--color-danger-hover);
+  border-left: 2px solid var(--color-danger);
+  color: var(--color-primary);
+  font-weight: 600;
 }
 
 .document-toc-link.document-toc-link:hover {
@@ -75,6 +75,19 @@ main {
 
 main .section-content {
   line-height: 36px;
+}
+
+.notecard {
+  margin: 2rem 0;
+  background: var(--color-primary-hover);
+  background-color: var(--color-primary-hover);
+  border: 1px solid #cdcdcd;
+  border-left: 4px solid var(--color-primary);
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 2px rgba(43,42,51,.05);
+  margin: 1rem 0;
+  padding: 1rem 1rem 1rem 3rem;
+  position: relative;
 }
 
 .shaking {
