Added new sections on hyperlink applications in code, updated images in index.html, and added settings for live server port in .vscode/settings.json. Refactored CSS styles for document-toc-link and notecard classes in index.css. Added color variables for primary hover and success in root.css. Added script imports for menu and card components in main.js. Updated title in history.html and added header menu comment.

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,6 +1,8 @@
 :root {
   --font-size: 16px;
   --color-primary: rgba(64, 158, 255, 1);
+  --color-primary-hover: rgba(64, 158, 255, 0.6);
   --color-danger: rgba(245, 108, 108, 1);
   --color-danger-hover: rgba(245, 108, 108, 0.6);
+  --color-success: rgba(103, 194, 58, 1);
 }
