--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(./root.css);
+
 html,
 body {
   margin: 0;
@@ -6,12 +7,14 @@ body {
   height: 100%;
   font-size: var(--font-size);
 }
+
 body {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e2e2e2;
 }
+
 .container {
   min-width: 600px;
   margin-top: 20px;
@@ -20,6 +23,7 @@ body {
   flex: 1;
   flex-basis: auto;
 }
+
 *,
 :after,
 :before {
@@ -33,5 +37,54 @@ body {
   flex-shrink: 0;
   position: fixed;
   top: 0;
+  z-index: 99;
   background-color: #e2e2e2;
+}
+
+.code-example {
+  color: #4e4e4e;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.code-example,
+code,
+pre {
+  border-radius: 0.25rem;
+  font-size: 0.833rem;
+  color: #efefef;
+  font-weight: bolder;
+}
+
+.code-example .example-header {
+  align-items: baseline;
+  background-color: var(--color-primary);
+  border-bottom: 1px solid #ccc;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 0;
+  padding: .1rem 1rem;
+}
+
+.code-example .example-header~iframe,
+.code-example .example-header~pre {
+  border-top: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-top: 0;
+}
+
+pre {
+  background-color: var(--color-primary);
+  border: 1px solid transparent;
+  margin: 1rem 0 2rem;
+  padding: 0 2.5rem 0 1rem;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
