Refine UI elements for enhanced readability and visual consistency: adjust colors for index and hover, set active font-weight to bold, standardize heading levels for consistency in document structure, increase border width of arrow for greater visibility, replace background image with higher resolution version.

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,8 +1,7 @@
 :root {
   --font-size: 16px;
-  --color-primary: rgba(64, 158, 255, 1);
-  --color-primary-hover: rgba(64, 158, 255, 0.6);
-  --color-danger: rgba(245, 108, 108, 1);
-  --color-danger-hover: rgba(245, 108, 108, 0.6);
-  --color-success: rgba(103, 194, 58, 1);
+  --color-primary: rgb(108, 176, 245);
+  --color-primary-hover: rgba(137, 189, 241, 0.6);
+  --color-danger: rgb(74, 163, 218);
+  --color-danger-hover: rgba(217, 235, 241, 0.6);
 }
